[package]
name = "actix_id_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.5.1"
actix-session = { version = "0.7.0", features = ["cookie-session"] }
actix-web = "4.1.0"
env_logger = "0.9.0"
listenfd = "1.0.0"
log = "0.4.17"
simple_logger = "2.2.0"
